tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_4.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/va-arg-4.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[1] = zero [cir_private, default, align 1, dso_local, constant]
global main.x : rec_big = {"abc"} [internal, default, align 1, dso_local]

fn abort() -> void [external, c, nothrow];
fn f(%arg0: rec_big*, %arg1: s8i*, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_big*, %arg1: s8i*):
        %13 = load %arg0 : rec_big
        %14 = alloca rec_big, "x", align 1
        %15 = alloca s8i*, "s", align 8
        %16 = alloca rec___va_list_tag[1], "ap", align 16
        store %13, %14
        store %arg1, %15
        scope {
            %34 = const 0 : s64i
            %35 = get_member %14[0] "a" : s8i[32]*
            %36 = get_element %35[%34] : s8i*
            %37 = load %36 : s8i, align 1
            %38 = cast(integral) %37 : s32i
            %39 = const 97 : s32i
            %40 = cmp ne %38, %39 : bool
            %41 = ternary %40 ? { : bool
                %59 = const #true : bool
                yield %59
            } : {
                %52 = const 1 : s64i
                %53 = get_member %14[0] "a" : s8i[32]*
                %54 = get_element %53[%52] : s8i*
                %55 = load %54 : s8i, align 1
                %56 = cast(integral) %55 : s32i
                %57 = const 98 : s32i
                %58 = cmp ne %56, %57 : bool
                yield %58
            }
            %42 = ternary %41 ? { : bool
                %51 = const #true : bool
                yield %51
            } : {
                %44 = const 2 : s64i
                %45 = get_member %14[0] "a" : s8i[32]*
                %46 = get_element %45[%44] : s8i*
                %47 = load %46 : s8i, align 1
                %48 = cast(integral) %47 : s32i
                %49 = const 99 : s32i
                %50 = cmp ne %48, %49 : bool
                yield %50
            }
            if %42 {
                %43 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %17 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
        <unmodeled: cir.va_start>
        scope {
            %29 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %31 = const 42 : s32i
            %32 = cmp ne %30, %31 : bool
            if %32 {
                %33 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %24 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %26 = const 120 : s32i
            %27 = cmp ne %25, %26 : bool
            if %27 {
                %28 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %19 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %21 = const 0 : s32i
            %22 = cmp ne %20, %21 : bool
            if %22 {
                %23 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %18 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
        <unmodeled: cir.va_end>
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @main.x : rec_big*
    %3 = get_global @.str : s8i[1]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = const 42 : s32i
    %6 = const 120 : s32i
    %7 = const 0 : s32i
    %8 = load %2 : rec_big, align 1
    %9 = alloca rec_big, "byval", align 8
    store %8, %9
    call @f(%9, %4, %5, %6, %7) [all]
    %10 = get_global @exit : ((s32i) -> void)*
    %11 = const 0 : s32i
    call @exit(%11) [all]
    %12 = load %0 : s32i
    return %12
}
