tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_6.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/va-arg-6.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %15 = alloca s32i, "n", align 4
        %16 = alloca rec___va_list_tag[1], "args", align 16
        store %arg0, %15
        %17 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
        <unmodeled: cir.va_start>
        scope {
            %59 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %61 = const 10 : s32i
            %62 = cmp ne %60, %61 : bool
            if %62 {
                %63 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %54 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %56 = const 10000000000 : s64i
            %57 = cmp ne %55, %56 : bool
            if %57 {
                %58 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %49 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %51 = const 11 : s32i
            %52 = cmp ne %50, %51 : bool
            if %52 {
                %53 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %44 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %46 = const 3.140000e+00 : long_double<f80>
            %47 = cmp ne %45, %46 : bool
            if %47 {
                %48 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %39 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %41 = const 12 : s32i
            %42 = cmp ne %40, %41 : bool
            if %42 {
                %43 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %34 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %36 = const 13 : s32i
            %37 = cmp ne %35, %36 : bool
            if %37 {
                %38 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %29 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %31 = const 20000000000 : s64i
            %32 = cmp ne %30, %31 : bool
            if %32 {
                %33 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %24 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %26 = const 14 : s32i
            %27 = cmp ne %25, %26 : bool
            if %27 {
                %28 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %19 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %21 = const 2.720000e+00 : double
            %22 = cmp ne %20, %21 : bool
            if %22 {
                %23 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %18 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
        <unmodeled: cir.va_end>
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 4 : s32i
    %3 = const 10 : s32i
    %4 = const 10000000000 : s64i
    %5 = const 11 : s32i
    %6 = const 3.140000e+00 : long_double<f80>
    %7 = const 12 : s32i
    %8 = const 13 : s32i
    %9 = const 20000000000 : s64i
    %10 = const 14 : s32i
    %11 = const 2.720000e+00 : double
    call @f(%2, %3, %4, %5, %6, %7, %8, %9, %10, %11) [all]
    %12 = get_global @exit : ((s32i) -> void)*
    %13 = const 0 : s32i
    call @exit(%13) [all]
    %14 = load %0 : s32i
    return %14
}
